Run TestNG Suite.

--- a/test-output/old/Functional Suite/methods-alphabetical.html
+++ b/test-output/old/Functional Suite/methods-alphabetical.html
@@ -1,34 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Functional Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ca085">  <td>20/07/12 11:36:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@5c7bfdc1]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@2107577743</td>   <td></td> </tr>
-<tr bgcolor="8ca085">  <td>20/07/12 11:36:55</td>   <td>48</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@5c7bfdc1]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@2107577743</td>   <td></td> </tr>
-<tr bgcolor="8ca085">  <td>20/07/12 11:36:55</td>   <td>50</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:testcases.TestCase1@5c7bfdc1]">&lt;&lt;closingDBConn</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107577743</td>   <td></td> </tr>
-<tr bgcolor="8ca085">  <td>20/07/12 11:36:55</td>   <td>-76</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:testcases.TestCase1@5c7bfdc1]">&gt;&gt;creatingDBConn</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107577743</td>   <td></td> </tr>
-<tr bgcolor="8ca085">  <td>20/07/12 11:36:55</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@5c7bfdc1]">doLogin</td> 
-  <td>main@2107577743</td>   <td></td> </tr>
-<tr bgcolor="bb6ba9">  <td>20/07/12 11:36:55</td>   <td>590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFailure.doLogin()[pri:0, instance:testcases.TestFailure@642a7222]">doLogin</td> 
-  <td>main@2107577743</td>   <td></td> </tr>
-<tr bgcolor="8ca085">  <td>20/07/12 11:36:55</td>   <td>-34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@5c7bfdc1]">doUserReg</td> 
-  <td>main@2107577743</td>   <td></td> </tr>
-<tr bgcolor="8474aa">  <td>20/07/12 11:36:55</td>   <td>509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@3b35a229]">doUserReg</td> 
-  <td>main@2107577743</td>   <td></td> </tr>
-<tr bgcolor="8474aa">  <td>20/07/12 11:36:55</td>   <td>532</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@3b35a229]">fourthTest</td> 
-  <td>main@2107577743</td>   <td></td> </tr>
-<tr bgcolor="8ca085">  <td>20/07/12 11:36:55</td>   <td>-35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@5c7bfdc1]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@2107577743</td>   <td></td> </tr>
-<tr bgcolor="8ca085">  <td>20/07/12 11:36:55</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@5c7bfdc1]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@2107577743</td>   <td></td> </tr>
-<tr bgcolor="737fd5">  <td>20/07/12 11:36:55</td>   <td>-101</td> <td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testcases.TestFailure@642a7222]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107577743</td>   <td></td> </tr>
-<tr bgcolor="737fd5">  <td>20/07/12 11:36:55</td>   <td>657</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testcases.TestFailure@642a7222]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107577743</td>   <td></td> </tr>
-<tr bgcolor="8474aa">  <td>20/07/12 11:36:55</td>   <td>524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@3b35a229]">thirdTest</td> 
-  <td>main@2107577743</td>   <td></td> </tr>
-<tr bgcolor="9f6368">  <td>20/07/12 11:36:55</td>   <td>364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.validateTitles()[pri:0, instance:testcases.TestCase2@45385f75]">validateTitles</td> 
-  <td>main@2107577743</td>   <td></td> </tr>
+<tr bgcolor="67e29c">  <td>20/07/13 09:27:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@71687585]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1267149311</td>   <td></td> </tr>
+<tr bgcolor="67e29c">  <td>20/07/13 09:27:05</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@71687585]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1267149311</td>   <td></td> </tr>
+<tr bgcolor="67e29c">  <td>20/07/13 09:27:05</td>   <td>22</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:testcases.TestCase1@71687585]">&lt;&lt;closingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1267149311</td>   <td></td> </tr>
+<tr bgcolor="67e29c">  <td>20/07/13 09:27:04</td>   <td>-57</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:testcases.TestCase1@71687585]">&gt;&gt;creatingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1267149311</td>   <td></td> </tr>
+<tr bgcolor="67e29c">  <td>20/07/13 09:27:05</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@71687585]">doLogin</td> 
+  <td>main@1267149311</td>   <td></td> </tr>
+<tr bgcolor="7bf0b5">  <td>20/07/13 09:27:05</td>   <td>492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFailure.doLogin()[pri:0, instance:testcases.TestFailure@21be3395]">doLogin</td> 
+  <td>main@1267149311</td>   <td></td> </tr>
+<tr bgcolor="67e29c">  <td>20/07/13 09:27:05</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@71687585]">doUserReg</td> 
+  <td>main@1267149311</td>   <td></td> </tr>
+<tr bgcolor="6fb871">  <td>20/07/13 09:27:05</td>   <td>363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@1e16c0aa]">doUserReg</td> 
+  <td>main@1267149311</td>   <td></td> </tr>
+<tr bgcolor="6fb871">  <td>20/07/13 09:27:05</td>   <td>396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@1e16c0aa]">fourthTest</td> 
+  <td>main@1267149311</td>   <td></td> </tr>
+<tr bgcolor="67e29c">  <td>20/07/13 09:27:05</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@71687585]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@1267149311</td>   <td></td> </tr>
+<tr bgcolor="67e29c">  <td>20/07/13 09:27:05</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@71687585]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@1267149311</td>   <td></td> </tr>
+<tr bgcolor="9d6878">  <td>20/07/13 09:27:04</td>   <td>-78</td> <td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testcases.TestFailure@21be3395]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1267149311</td>   <td></td> </tr>
+<tr bgcolor="9d6878">  <td>20/07/13 09:27:05</td>   <td>538</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testcases.TestFailure@21be3395]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1267149311</td>   <td></td> </tr>
+<tr bgcolor="6fb871">  <td>20/07/13 09:27:05</td>   <td>382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@1e16c0aa]">thirdTest</td> 
+  <td>main@1267149311</td>   <td></td> </tr>
+<tr bgcolor="98bf75">  <td>20/07/13 09:27:05</td>   <td>236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.validateTitles()[pri:0, instance:testcases.TestCase2@2d29b4ee]">validateTitles</td> 
+  <td>main@1267149311</td>   <td></td> </tr>
 </table>
