--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="92827e">  <td>20/07/12 11:47:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.doLogin()[pri:0, instance:testNGListenerOnFailure.LoginTest@76b1e9b8]">doLogin</td> 
-  <td>main@1401316767</td>   <td></td> </tr>
-<tr bgcolor="a47576">  <td>20/07/12 11:47:26</td>   <td>-14565</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:testNGListenerOnFailure.LoginTest@76b1e9b8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1401316767</td>   <td></td> </tr>
-<tr bgcolor="a47576">  <td>20/07/12 11:47:44</td>   <td>3137</td> <td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:testNGListenerOnFailure.LoginTest@76b1e9b8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1401316767</td>   <td></td> </tr>
+<tr bgcolor="bb816e">  <td>20/07/13 10:25:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLogin.doLogin()[pri:1, instance:retry.TestLogin@7526515b]">doLogin</td> 
+  <td>main@406765571</td>   <td></td> </tr>
+<tr bgcolor="bb816e">  <td>20/07/13 10:25:11</td>   <td>80</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLogin.registerUsers()[pri:2, instance:retry.TestLogin@7526515b]">registerUsers</td> 
+  <td>main@406765571</td>   <td></td> </tr>
 </table>
