15th commit - Retry Listener to Re-Run Failed Test Cases

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,17 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite1</th></tr>
-<tr><td><a href="#t0">Login</a></td><td class="num">2</td><td class="num attn">2</td><td class="num">0</td><td class="num">123</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Login</a></td><td class="num">2</td><td class="num attn">1</td><td class="num">0</td><td class="num">122</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="2">retry.TestLogin</td><td><a href="#m0">registerUsers</a></td><td rowspan="2">1594610168122</td><td rowspan="2">5</td></tr><tr class="skippedeven"><td><a href="#m1">registerUsers</a></td></tr><tr><th colspan="4">Login &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">retry.TestLogin</td><td><a href="#m2">doLogin</a></td><td rowspan="1">1594610168099</td><td rowspan="1">17</td></tr><tr class="passedeven"><td><a href="#m3">registerUsers</a></td><td rowspan="1">1594610168139</td><td rowspan="1">2</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">retry.TestLogin</td><td><a href="#m0">registerUsers</a></td><td rowspan="1">1594610411087</td><td rowspan="1">7</td></tr><tr><th colspan="4">Login &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">retry.TestLogin</td><td><a href="#m1">doLogin</a></td><td rowspan="1">1594610411062</td><td rowspan="1">19</td></tr><tr class="passedeven"><td><a href="#m2">registerUsers</a></td><td rowspan="1">1594610411103</td><td rowspan="1">7</td></tr></tbody>
 </table>
-<h2>Login</h2><h3 id="m0">retry.TestLogin#registerUsers</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [3] but found [1]
+<h2>Login</h2><h3 id="m0">retry.TestLogin#registerUsers</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [2] but found [1]
 	at retry.TestLogin.registerUsers(TestLogin.java:18)
 ... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">retry.TestLogin#registerUsers</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [3] but found [2]
-	at retry.TestLogin.registerUsers(TestLogin.java:18)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">retry.TestLogin#doLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">retry.TestLogin#registerUsers</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">retry.TestLogin#doLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">retry.TestLogin#registerUsers</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
