Run TestNG Suite

--- a/test-output/html/suite1_test3_results.html
+++ b/test-output/html/suite1_test3_results.html
@@ -12,7 +12,7 @@
 <body>
 <h1>Dependency Test</h1>
 <p>
-  Test duration: 0.007s
+  Test duration: 0.005s
 </p>
 
 
@@ -44,10 +44,10 @@
     <div class="stackTrace" id="exception-0">
               org.testng.Assert.fail(Assert.java:96)<br />
               testcases.TestCase3.doUserReg(TestCase3.java:11)<br />
-              java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br />
-              java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)<br />
-              java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)<br />
-              java.base/java.lang.reflect.Method.invoke(Method.java:564)<br />
+              sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br />
+              sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)<br />
+              sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)<br />
+              java.lang.reflect.Method.invoke(Unknown Source)<br />
               org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)<br />
               org.testng.internal.Invoker.invokeMethod(Invoker.java:583)<br />
               org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)<br />
@@ -123,7 +123,7 @@
                   thirdTest
       </td>
   <td class="duration">
-    0.003s
+    0.001s
   </td>
   <td class="result">
         
