--- a/test-output/html/suite1_test2_results.html
+++ b/test-output/html/suite1_test2_results.html
@@ -12,7 +12,7 @@
 <body>
 <h1>Validate Test</h1>
 <p>
-  Test duration: 0.019s
+  Test duration: 0.009s
 </p>
 
 
@@ -28,7 +28,7 @@
                   validateTitles
       </td>
   <td class="duration">
-    0.019s
+    0.009s
   </td>
   <td class="result">
         
@@ -47,10 +47,10 @@
     <div class="stackTrace" id="exception-0">
               org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:43)<br />
               testcases.TestCase2.validateTitles(TestCase2.java:42)<br />
-              java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br />
-              java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)<br />
-              java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)<br />
-              java.base/java.lang.reflect.Method.invoke(Method.java:564)<br />
+              sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br />
+              sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)<br />
+              sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)<br />
+              java.lang.reflect.Method.invoke(Unknown Source)<br />
               org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)<br />
               org.testng.internal.Invoker.invokeMethod(Invoker.java:583)<br />
               org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)<br />
